--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>開発途上サイト</title>
+  <title>開発サイト</title>
   <meta name="description" content="サイトの説明文">
 </head>
 <body>
-  <h1>開発途上サイト</h1>
+  <h1>開発サイト</h1>
   <p></p>
-
+  <!--<p>結果：{{result}}</p>-->
   <p>結果：{{result}}</p>
 
 </body>
